# fun-with-words

./: README.md  pyproject.toml
exploration/: Data Parsing Experimentation.ipynb  Model Testing.ipynb
fun_with_words/: data.py
tests/: test_data.py
