[tool.poetry]
name = "fun-with-words"
version = "0.1.0"
description = "A package for playing around with natural language processing techniques."
authors = ["Daniel Holland <danielholland414@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
jupyter = "^1.0.0"
notebook = "^6.1.6"
# see https://github.com/ipython/ipython/issues/12740 for issue with jedi and jupyter
jedi = "<0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
